# moy-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  struct.txt
data/: index.html  scada.html
data/css/: style.css
data/js/: app.js
data/js/modules/: api.js  charts.js  config.js  dashboard.js  graphs.js  pins.js  settings.js  ui.js
main/: CMakeLists.txt  idf_component.yml  main.c  wifi_station.c
main/hal/: hal_board.h  hal_board_detect.c  hal_board_esp32.c  hal_board_esp32c6.c  hal_board_esp32c6_remote.c  hal_board_esp32p4.c
main/include/: at_check.h  config.h  config_manager.h  core.h  ds18b20.h  index_html.h  logger.h  module.h  pcf8574.h  pin_config.h  pin_manager.h  platform.h  sensor_module.h  webserver.h  webserver_priv.h  wifi_manager.h  wifi_station.h
main/src/: at_check.c  config.c  config_manager.c  core.c  ds18b20.c  module.c  pcf8574.c  pin_config.c  pin_manager.c  pin_manager_module.c  platform.c  sensor_module.c  webserver.c  wifi_manager.c  wifi_station.c
main/src/modules/: module_gpio.c  module_test.c  module_web.c
main/src/webserver/: webserver_api.c  webserver_config.c  webserver_core.c  webserver_handlers.c  webserver_html.c
